SEEDSDT-601 fix spacing taking into account multiple usages. Fix selector with taking into account multiple usages

--- a/ui/src/embeddable/filter/filter.scss
+++ b/ui/src/embeddable/filter/filter.scss
@@ -12,7 +12,7 @@
 
   .country-filter-container {
     width: $screen-width !important;
-    @media only screen and (max-width: 1366px){
+    @media only screen and (max-width: 1366px) {
       padding: 0 $base-unit * 2.8;
     }
 
@@ -47,7 +47,8 @@
           height: 60px;
           width: 100%;
           padding-left: 25px;
-          .angle.icon{
+
+          .angle.icon {
             margin-left: -18px;
           }
 
@@ -100,6 +101,14 @@
         .active.title {
           .dropdown.icon {
             transform: rotate(90deg);
+          }
+        }
+      }
+
+      &.narrow {
+        .item {
+          .content {
+            width: 160%;
           }
         }
       }
